--- a/Nombre_Alumno/index.html
+++ b/Nombre_Alumno/index.html
@@ -10,6 +10,7 @@
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	<!-- css de estilos propio -->
 	<link rel="stylesheet" type="text/css" href="asset/css/estilos.css">
+	<script src="https://kit.fontawesome.com/b26815e738.js" crossorigin="anonymous"></script><!-- Con esto agrego FontAwesome a la pag -->
 </head>
 <body>
 	<header class="ContenedorMenu fixed-top">
@@ -94,8 +95,26 @@
 		
 	</main>
 	<footer>
-		<div class="pagos"></div>
-		<div class="legal"></div>
+			<div class="ForPag">
+			<h2>FORMAS DE PAGO</h2>
+			<ul>
+				<li><i class="fab fa-paypal"></i> PayPal</li>
+				<li><i class="fab fa-cc-visa"></i> Visa</li>
+				<li><i class="fab fa-cc-mastercard"></i> MasterCard</li>
+			</ul>
+		</div>
+		<div class="MetEnv">
+			<h2>MÉTODOS DE ENVIO</h2>
+			<ul>
+				<li><i class="fab fa-dhl"></i> DHL</li>
+				<li><i class="fab fa-ups"></i> UPS</li>
+				<li><i class="far fa-address-book"></i> CORREO</li>
+			</ul>
+		</div>
+		<div class="Aviso">
+			<p>Aviso Legal Política de Privacidad  Baja
+Newsletter</p>
+		</div>
 	</footer>
 
 </body>
